--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@ Fork the repo from here <a href= "https://github.com/MozLNMIIT/mozlnmiit.github.
         <td>Sagar Chand Agarwal</td>
         <td><a href="mailto:atomsagar@gmail.com">atomsagar@gmail.com</a>
       </tr>
+   <tr>
+        <td>1</td>
+        <td>Shashank Agarwal</td>
+        <td><a href="mailto:shashankagarwal181996@gmail.com">atomsagar@gmail.com</a>
+      </tr>
     </table>
   </p>
 </body>
